updated food show

--- a/views/drinks_index.ejs
+++ b/views/drinks_index.ejs
@@ -25,7 +25,7 @@
     <ul>
         <% for(let i = 0; i < allFood.length; i++) { %>
             <li>  
-                <a href="/food/<%=allFood[i].name%>/<%allFood[i].price%>/<%=allFood[i].name%>/<%allFood[i].price%>"><%=allFood[i].name%></a>
+                <a href="/drinks/food/<%=i%>"><%=allFood[i].name%></a>
             </li>
          <% } %>
     </ul>
