--- a/views/food_show.ejs
+++ b/views/food_show.ejs
@@ -17,8 +17,8 @@
 </head>
 <body>
     <h1>At foo bar</h1>
-    <h2><%= drink.name %></h2>
-    <h2>Price: <%= drink.price %></h2>
-    <img src="<%= drink.image %>">
+    <h2><%= food.name %></h2>
+    <h2>Price: <%= food.price %></h2>
+    <img src="<%= food.image %>">
 </body>
 </html>
